# ff-rdp

./: .gitattributes  .gitignore  .hyalo.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  submit-winget-0.2.0.sh
.cargo/: config.toml
crates/ff-rdp-cli/: Cargo.toml  build.rs
crates/ff-rdp-cli/assets/extensions/: LICENSE-consent-o-matic.txt
crates/ff-rdp-cli/schemas/: page-map.schema.json  script.schema.json
crates/ff-rdp-cli/skills/ff-rdp-debug/: SKILL.md
crates/ff-rdp-cli/src/: connection_meta.rs  daemon_record.rs  daemon_status.rs  dispatch.rs  error.rs  hints.rs  main.rs  output.rs  output_controls.rs  output_pipeline.rs  port_owner.rs  render_blocking.rs  tab_target.rs
crates/ff-rdp-cli/src/cli/: args.rs  mod.rs
crates/ff-rdp-cli/src/commands/: a11y.rs  a11y_contrast.rs  a11y_summary.rs  auto_consent.rs  cascade.rs  click.rs  completions.rs  computed.rs  connect_tab.rs  console.rs  cookies.rs  doctor.rs  dom.rs  dom_tree.rs  emulate.rs  eval.rs  eval_helpers.rs  geometry.rs  index.rs  inspect.rs  install_skill.rs  js_helpers.rs  launch.rs  llm_help.rs  manifest.rs  mod.rs  nav_action.rs  navigate.rs  network.rs  network_events.rs  page_text.rs  perf.rs  perf_compare.rs  polling.rs  profiles.rs  recipes.rs  record.rs  responsive.rs  run.rs  screenshot.rs  (+10 more)
crates/ff-rdp-cli/src/daemon/: buffer.rs  client.rs  mod.rs  process.rs  registry.rs  server.rs
crates/ff-rdp-cli/src/page_map/: mod.rs
crates/ff-rdp-cli/src/script/: format.rs  mod.rs  recorder.rs  runner.rs  vars.rs
crates/ff-rdp-cli/src/util/: mod.rs  profile_dir.rs  safe_io.rs
crates/ff-rdp-cli/tests/: a11y_e2e_test.rs  cli_cookies_help.rs  cli_help_groups.rs  cli_version.rs  click_e2e_test.rs  computed_e2e_test.rs  console_e2e_test.rs  cookies_e2e_test.rs  daemon_e2e_test.rs  daemon_parity_e2e_test.rs  dom_e2e_test.rs  dom_help_mentions_styles.rs  dom_tree_e2e_test.rs  error_shapes.rs  eval_e2e_test.rs  eval_object_leak_soak.rs  geometry_e2e_test.rs  inspect_e2e_test.rs  launch_e2e_test.rs  live_100_daemon_lifecycle_hardening.rs  live_61l.rs  live_61q_resource_bus.rs  live_61r_eval.rs  live_61r_screenshot.rs  live_62_page_map_index.rs  live_86_perf_field_fixes.rs  live_90_daemon_lifecycle.rs  live_92_navigate_epoch.rs  live_92_screenshot_full_page.rs  live_94_polish_bundle.rs  live_95_cascade_computed_agreement.rs  live_96_profile_cleanup.rs  live_98_media_query_truthfulness.rs  live_a11y_contrast_wai_bad.rs  live_a11y_critical.rs  live_bulk_cap.rs  live_cascade.rs  live_cascade_explains_pico_dialog.rs  live_cascade_real_site.rs  live_console_no_double_delivery.rs  (+46 more)
crates/ff-rdp-cli/tests/common/: mod.rs
crates/ff-rdp-cli/tests/e2e/: a11y.rs  click.rs  completions.rs  computed.rs  console.rs  cookies.rs  daemon.rs  daemon_parity.rs  doctor.rs  dom.rs  dom_tree.rs  emulate.rs  eval.rs  exit_codes.rs  geometry.rs  hints.rs  inspect.rs  install_skill.rs  launch.rs  main.rs  manifest.rs  nav_action.rs  navigate.rs  network.rs  page_text.rs  perf.rs  perf_compare.rs  recorder.rs  responsive.rs  screenshot.rs  script_runner.rs  scroll.rs  snapshot.rs  sources.rs  static_commands.rs  storage.rs  styles.rs  tabs.rs  type_text.rs  wait.rs
crates/ff-rdp-cli/tests/fixtures/: a11y_children_response.json  a11y_get_root_response.json  a11y_get_walker_response.json  capture_screenshot_response.json  console_follow_cross_connection.json  dom_walker_children_response.json  dom_walker_document_element_response.json  dom_walker_query_selector_response.json  eval_immediate_response.json  eval_result_a11y_summary.json  eval_result_cached_exception.json  eval_result_cached_longstring.json  eval_result_click.json  eval_result_computed_empty.json  eval_result_computed_multi.json  eval_result_computed_prop.json  eval_result_computed_single.json  eval_result_contrast.json  eval_result_cookies.json  eval_result_cookies_empty.json  eval_result_dom_attrs.json  eval_result_dom_multi_text.json  eval_result_dom_null.json  eval_result_dom_single.json  eval_result_dom_stats.json  eval_result_dom_text.json  eval_result_dom_text_attrs.json  eval_result_element_not_found.json  eval_result_empty_array.json  eval_result_exception.json  eval_result_geometry.json  eval_result_geometry_mixed_visibility.json  eval_result_geometry_overlap.json  eval_result_geometry_visible_only.json  eval_result_long_string.json  eval_result_network_perf_fallback.json  eval_result_number.json  eval_result_object.json  eval_result_page_text.json  eval_result_page_text_long.json  (+75 more)
crates/ff-rdp-core/: Cargo.toml
crates/ff-rdp-core/src/: actor.rs  connection.rs  error.rs  lib.rs  registry.rs  session.rs  transport.rs  types.rs
crates/ff-rdp-core/tests/: connection_test.rs  live_61p_registry.rs  live_61u.rs  live_firefox_test.rs  live_record_fixtures.rs  mock_server_inject_test.rs  no_string_actor_ids.rs  probe_storage_actor.rs  probe_watcher_buffering.rs  record_fixtures.rs  record_iter4_fixtures.rs  record_net_details.rs  resource_command_bus_test.rs  storage_test.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: check_actor_kb_sync.rs  check_daemon_locks.rs  check_dead_primitives.rs  check_discipline_regression.rs  check_dogfood_script.rs  check_firefox_refs.rs  check_iteration_plan.rs  check_iteration_ready.rs  check_live_test_layout.rs  check_oneway_conformance.rs  check_pre_fix_repro.rs  check_todo_annotations.rs  find_iteration_plan.rs  main.rs
crates/xtask/tests/: ac_fidelity_check.rs  ac_fidelity_test_existence.rs  bin_exit_codes.rs  check_actor_kb_sync.rs  check_firefox_refs.rs  check_iteration_ready.rs  claude_md_lists_new_gates.rs  discipline_docs_mention_aggregator.rs  find_iteration_plan.rs  lint_dogfood_script.rs  live_check_pre_fix_repro.rs  run_agent_fixtures.rs  tools_branch_protection.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: parse_page_map_str.rs  parse_script_file.rs  transport_recv_from.rs
fuzz/seeds/parse_page_map_str/: seed_minimal_json  seed_minimal_yaml
fuzz/seeds/parse_script_file/: seed_minimal_json  seed_minimal_yaml
fuzz/seeds/transport_recv_from/: seed_bulk  seed_empty  seed_json
(+589 files in other folders)
