[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/ff-rdp-cli"]

[workspace.package]
version = "0.1.0"
authors = ["James Bergamin"]
edition = "2024"
license = "MIT"
repository = "https://github.com/ractive/ff-rdp"
homepage = "https://github.com/ractive/ff-rdp"
readme = "README.md"
keywords = ["firefox", "rdp", "devtools", "remote-debugging"]
categories = ["command-line-utilities", "development-tools"]
description = "CLI for Firefox Remote Debugging Protocol"

[workspace.dependencies]
# Internal crates
ff-rdp-core = { path = "crates/ff-rdp-core", version = "0.1.0" }

# External dependencies
anyhow = "1"
base64 = "0.22"
clap = { version = "4.6", features = ["derive"] }
regex = "1"
jaq-core = "3.0.0"
jaq-json = { version = "2.0.0", features = ["serde"] }
jaq-std = "3.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "6"
fs2 = "0.4"
thiserror = "2"
tempfile = "3"
url = "2"
ureq = "3"

[workspace.dependencies.libc]
version = "0.2"

[workspace.dependencies.windows-sys]
version = "0.59"
features = ["Win32_System_Threading", "Win32_Foundation"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
return_self_not_must_use = "allow"
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
module_name_repetitions = "allow"
struct_excessive_bools = "allow"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
