[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/ff-rdp-cli"]

[workspace.package]
version = "0.2.0"
authors = ["James Bergamin"]
edition = "2024"
# MSRV (iter-105 Theme D): pinned to the toolchain CI actually validates
# (dtolnay/rust-toolchain@stable, 1.95 at branch time).  Declaring it turns an
# MSRV break into a red `msrv` CI check instead of a downstream user report.
# The point is *declaring* the floor, not supporting old compilers — bump this
# in lockstep whenever CI's stable toolchain advances.
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/ractive/ff-rdp"
homepage = "https://github.com/ractive/ff-rdp"
readme = "README.md"
keywords = ["firefox", "rdp", "devtools", "remote-debugging"]
categories = ["command-line-utilities", "development-tools"]
description = "CLI for Firefox Remote Debugging Protocol"

[workspace.dependencies]
# Internal crates
ff-rdp-core = { path = "crates/ff-rdp-core", version = "0.2.0" }

# External dependencies
anyhow = "1"
base64 = "0.22"
clap = { version = "4.6", features = ["derive"] }
regex = "1"
jaq-core = "3.0.0"
jaq-json = { version = "2.0.0", features = ["serde"] }
jaq-std = "3.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
# serde_norway (iter-105 Theme D): maintained fork replacing the archived,
# RUSTSEC-flagged `serde_yaml` (dtolnay archived it 2024).  Drop-in
# API-compatible (`from_str`/`to_string` on the same types), so no call-site
# logic changes and the recorded YAML output stays byte-identical.
serde_norway = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "6"
fs2 = "0.4"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
filetime = "0.2"
dashmap = "6"
getrandom = "0.2"
url = "2"
ureq = "3"
include_dir = "0.7"
subtle = "2"
walkdir = "2"

[workspace.dependencies.libc]
version = "0.2"

[workspace.dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_System_Threading",
    "Win32_System_Console",      # SetConsoleCtrlHandler for daemon signal cleanup (iter-100 Theme C)
    "Win32_Foundation",
    "Win32_Security",            # CreateFileW's signature references SECURITY_ATTRIBUTES from this feature
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
]

# iter-105 Theme D: workspace-wide rust lints.
#
# `unsafe_code = "forbid"` is the workspace default, retiring ff-rdp-core's
# hand-rolled `#![forbid(unsafe_code)]` + source-scan test.  The CLI crate has
# real FFI (unix `libc` for daemon process management, `windows-sys` for console
# signal handlers) and cannot inherit `forbid` — it overrides this to
# `unsafe_code = "deny"` in its own `[lints.rust]` table so unsafe blocks must be
# explicit and reviewed, but the narrowly-scoped, audited FFI can still compile.
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
return_self_not_must_use = "allow"
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
module_name_repetitions = "allow"
struct_excessive_bools = "allow"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
