[package]
name = "ff-rdp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["cli", "firefox", "rdp", "devtools"]
categories = ["command-line-utilities"]
description = "CLI for Firefox Remote Debugging Protocol"

[[bin]]
name = "ff-rdp"
path = "src/main.rs"

[dependencies]
ff-rdp-core = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
jaq-core = { workspace = true }
jaq-json = { workspace = true }
jaq-std = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
fs2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
getrandom = { workspace = true }
tempfile = { workspace = true }
url = { workspace = true }
ureq = { workspace = true }
include_dir = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[[test]]
name = "e2e"
path = "tests/e2e/main.rs"

[[test]]
name = "playbook_evals"
path = "tests/playbook_evals.rs"

# All live-Firefox suites are consolidated into one gated target (iter-100b).
# Sibling files under tests/live/ are `mod`-declared from main.rs and are NOT
# separate test binaries. Adding a new top-level tests/live_*.rs file is a
# review defect — enforced by `cargo run -p xtask -- check-live-test-layout`.
[[test]]
name = "live"
path = "tests/live/main.rs"

[[test]]
name = "error_shapes"
path = "tests/error_shapes.rs"

[dev-dependencies]
ff-rdp-core = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
dirs = { workspace = true }
filetime = { workspace = true }
jsonschema = "0.27"
sha2 = "0.10"

[target.'cfg(unix)'.dev-dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dev-dependencies]
windows-sys = { workspace = true }

[lints]
workspace = true
