[package]
name = "ff-rdp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["cli", "firefox", "rdp", "devtools"]
categories = ["command-line-utilities"]
description = "CLI for Firefox Remote Debugging Protocol"

[[bin]]
name = "ff-rdp"
path = "src/main.rs"

[dependencies]
ff-rdp-core = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
jaq-core = { workspace = true }
jaq-json = { workspace = true }
jaq-std = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
fs2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
getrandom = { workspace = true }
tempfile = { workspace = true }
url = { workspace = true }
ureq = { workspace = true }
include_dir = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[[test]]
name = "e2e"
path = "tests/e2e/main.rs"

[[test]]
name = "playbook_evals"
path = "tests/playbook_evals.rs"

# All live-Firefox suites are consolidated into one gated target (iter-100b).
# Sibling files under tests/live/ are `mod`-declared from main.rs and are NOT
# separate test binaries. Adding a new top-level tests/live_*.rs file is a
# review defect — enforced by `cargo run -p xtask -- check-live-test-layout`.
[[test]]
name = "live"
path = "tests/live/main.rs"

[[test]]
name = "error_shapes"
path = "tests/error_shapes.rs"

[dev-dependencies]
ff-rdp-core = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
dirs = { workspace = true }
filetime = { workspace = true }
jsonschema = "0.27"
sha2 = "0.10"

[target.'cfg(unix)'.dev-dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dev-dependencies]
windows-sys = { workspace = true }

# iter-105 Theme D: this crate cannot inherit the workspace lints table because
# the workspace default is `unsafe_code = "forbid"` and this crate has real,
# audited FFI (unix `libc` process-group signalling in daemon/process.rs, unix
# `setenv` in script/vars.rs tests, `windows-sys` console handlers).  `forbid`
# cannot be relaxed per-block, so instead we set `unsafe_code = "deny"` here —
# every `unsafe` block must be explicit and carry a `// SAFETY:` justification
# (all current call sites already do), keeping the allowance narrow and
# reviewable while still letting the FFI compile.  The clippy table mirrors the
# workspace `[workspace.lints.clippy]` config since a crate-level `[lints]`
# table replaces (does not merge with) the inherited one.
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
return_self_not_must_use = "allow"
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
module_name_repetitions = "allow"
struct_excessive_bools = "allow"

[package.metadata.deb]
maintainer = "ractive"
section = "utils"
priority = "optional"
assets = [
    ["target/release/ff-rdp", "usr/bin/", "755"],
    ["../../LICENSE", "usr/share/doc/ff-rdp/", "644"],
    ["../../README.md", "usr/share/doc/ff-rdp/", "644"],
    ["completions/ff-rdp.bash", "usr/share/bash-completion/completions/ff-rdp", "644"],
    ["completions/_ff-rdp", "usr/share/zsh/vendor-completions/_ff-rdp", "644"],
    ["completions/ff-rdp.fish", "usr/share/fish/vendor_completions.d/ff-rdp.fish", "644"],
]
extended-description = "A CLI for the Firefox Remote Debugging Protocol."

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/ff-rdp", dest = "/usr/bin/ff-rdp", mode = "755" },
    { source = "../../LICENSE", dest = "/usr/share/doc/ff-rdp/LICENSE", mode = "644", doc = true },
    { source = "../../README.md", dest = "/usr/share/doc/ff-rdp/README.md", mode = "644", doc = true },
    { source = "completions/ff-rdp.bash", dest = "/usr/share/bash-completion/completions/ff-rdp", mode = "644" },
    { source = "completions/_ff-rdp", dest = "/usr/share/zsh/site-functions/_ff-rdp", mode = "644" },
    { source = "completions/ff-rdp.fish", dest = "/usr/share/fish/vendor_completions.d/ff-rdp.fish", mode = "644" },
]
